--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
   const nameInputElement = document.getElementById("name-input");
   const commentTextareaElement = document.getElementById("comment-text");
   const options = { year: 'numeric', month: 'numeric', day: 'numeric', hour: 'numeric', minute: 'numeric' };
+  let comments = [];
 
   const initEventListeners = () => {
     const buttonElements = document.querySelectorAll(".like-button");
@@ -36,12 +37,12 @@
       buttonElement.addEventListener("click", () => {
         event.stopPropagation();
         const index = buttonElement.dataset.index;
-        if (comments[index].buttonClass == "like-button -active-like") {
+        if (comments[index].isLiked == true) {
           comments[index].likeCounter--;
-          comments[index].buttonClass = "like-button";
+          comments[index].isLiked = false;
         } else {
           comments[index].likeCounter++;
-          comments[index].buttonClass = "like-button -active-like";
+          comments[index].isLiked = true;
         }
         renderComments();
       })
@@ -56,23 +57,41 @@
       })
     }
   }
+  const fetchPromise = fetch("https://wedev-api.sky.pro/api/v1/pauline-orda/comments", {
+    method: "GET"
+  });
 
-  const comments = [
-    {
-      userName: "Глеб Фокин",
-      text: "Это будет первый комментарий на этой странице",
-      likeCounter: 3,
-      buttonClass: "like-button",
-      date: new Date(2022, 1, 12, 12, 18)
-    },
-    {
-      userName: "Варвара Н.",
-      text: "Мне нравится как оформлена эта страница!",
-      likeCounter: 75,
-      buttonClass: "like-button -active-like",
-      date: new Date(2022, 1, 13, 19, 22)
-    }
-  ];
+  fetchPromise.then((response) => {
+    const res = response.json().then((responseData) => {
+      comments = responseData.comments.map((comment) => {
+        return {
+          userName: comment.author.name,
+          date: new Date(comment.date),
+          text: comment.text,
+          likeCounter: comment.likes,
+          isLiked: false,
+        }
+      })
+      renderComments();
+    })
+  });
+
+  // const comments = [
+  //   {
+  //     userName: "Глеб Фокин",
+  //     text: "Это будет первый комментарий на этой странице",
+  //     likeCounter: 3,
+  //     isLiked: false,
+  //     date: new Date(2022, 1, 12, 12, 18)
+  //   },
+  //   {
+  //     userName: "Варвара Н.",
+  //     text: "Мне нравится как оформлена эта страница!",
+  //     likeCounter: 75,
+  //     isLiked: true,
+  //     date: new Date(2022, 1, 13, 19, 22)
+  //   }
+  // ];
 
   const renderComments = () => {
     const commentsHtml = comments.map((comment, index) => {
@@ -89,7 +108,7 @@
           <div class="comment-footer">
             <div class="likes">
               <span class="likes-counter">${comment.likeCounter}</span>
-              <button data-index="${index}"class="${comment.buttonClass}"></button>
+              <button data-index="${index}"class="${comment.isLiked ? "like-button -active-like" : "like-button"}"></button>
             </div>
           </div>
         </li>`;
@@ -125,23 +144,29 @@
       return;
     }
 
-    comments.push({
-      userName: nameInputElement.value
-        .replaceAll("&", "&amp;")
-        .replaceAll("<", "&lt;")
-        .replaceAll(">", "&gt;")
-        .replaceAll('"', "&quot;"),
-      text: commentTextareaElement.value
-        .replaceAll("&", "&amp;")
-        .replaceAll("<", "&lt;")
-        .replaceAll(">", "&gt;")
-        .replaceAll('"', "&quot;"),
-      likeCounter: 0,
-      buttonClass: "like-button",
-      date: new Date()
-    })
+    const fetchPromise = fetch("https://wedev-api.sky.pro/api/v1/pauline-orda/comments", {
+      method: "POST",
+      body: JSON.stringify({
+        text: commentTextareaElement.value
+          .replaceAll("&", "&amp;")
+          .replaceAll("<", "&lt;")
+          .replaceAll(">", "&gt;")
+          .replaceAll('"', "&quot;"),
+        name: nameInputElement.value
+          .replaceAll("&", "&amp;")
+          .replaceAll("<", "&lt;")
+          .replaceAll(">", "&gt;")
+          .replaceAll('"', "&quot;")
+      })
+    });
 
-    renderComments();
+    fetchPromise.then((response) => {
+      const res = response.json().then((responseData) => {
+        comments = responseData.comments;
+        renderComments();
+      })
+    });
+    
     nameInputElement.value = "";
     commentTextareaElement.value = "";
   });
