--- a/index.html
+++ b/index.html
@@ -57,12 +57,10 @@
       })
     }
   }
-  const fetchPromise = fetch("https://wedev-api.sky.pro/api/v1/pauline-orda/comments", {
+  fetch("https://wedev-api.sky.pro/api/v1/pauline-orda/comments", {
     method: "GET"
-  });
-
-  fetchPromise.then((response) => {
-    const res = response.json().then((responseData) => {
+  }).then((response) => {
+    response.json().then((responseData) => {
       comments = responseData.comments.map((comment) => {
         return {
           userName: comment.author.name,
@@ -75,23 +73,6 @@
       renderComments();
     })
   });
-
-  // const comments = [
-  //   {
-  //     userName: "Глеб Фокин",
-  //     text: "Это будет первый комментарий на этой странице",
-  //     likeCounter: 3,
-  //     isLiked: false,
-  //     date: new Date(2022, 1, 12, 12, 18)
-  //   },
-  //   {
-  //     userName: "Варвара Н.",
-  //     text: "Мне нравится как оформлена эта страница!",
-  //     likeCounter: 75,
-  //     isLiked: true,
-  //     date: new Date(2022, 1, 13, 19, 22)
-  //   }
-  // ];
 
   const renderComments = () => {
     const commentsHtml = comments.map((comment, index) => {
@@ -144,7 +125,7 @@
       return;
     }
 
-    const fetchPromise = fetch("https://wedev-api.sky.pro/api/v1/pauline-orda/comments", {
+    fetch("https://wedev-api.sky.pro/api/v1/pauline-orda/comments", {
       method: "POST",
       body: JSON.stringify({
         text: commentTextareaElement.value
@@ -158,15 +139,27 @@
           .replaceAll(">", "&gt;")
           .replaceAll('"', "&quot;")
       })
-    });
-
-    fetchPromise.then((response) => {
+    }).then((response) => {
       const res = response.json().then((responseData) => {
-        comments = responseData.comments;
-        renderComments();
+        fetch("https://wedev-api.sky.pro/api/v1/pauline-orda/comments", {
+          method: "GET"
+        }).then((response) => {
+          response.json().then((responseData) => {
+            comments = responseData.comments.map((comment) => {
+              return {
+                userName: comment.author.name,
+                date: new Date(comment.date),
+                text: comment.text,
+                likeCounter: comment.likes,
+                isLiked: false,
+              }
+            })
+            renderComments();
+          })
+        });
       })
     });
-    
+
     nameInputElement.value = "";
     commentTextareaElement.value = "";
   });
