--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+
 
 <head>
   <title>Проект "Комменты"</title>
@@ -12,193 +12,16 @@
     <ul id="list" class="comments">
     </ul>
     <div id="comment-add-form" class="add-form">
-    </div>
-    <div class="form-loading">Комментарий добавляется...</div>
-  </div>
-</body>
-
-<script>
-  "use strict";
-  const listElement = document.getElementById("list");
-  const formElement = document.getElementById("comment-add-form");
-  const options = { year: 'numeric', month: 'numeric', day: 'numeric', hour: 'numeric', minute: 'numeric' };
-  let comments = [];
-
-  const initEventListeners = () => {
-    const buttonElements = document.querySelectorAll(".like-button");
-    for (const buttonElement of buttonElements) {
-      buttonElement.addEventListener("click", () => {
-        event.stopPropagation();
-        const index = buttonElement.dataset.index;
-        if (comments[index].isLiked == true) {
-          comments[index].likeCounter--;
-          comments[index].isLiked = false;
-        } else {
-          comments[index].likeCounter++;
-          comments[index].isLiked = true;
-        }
-        renderComments();
-      })
-    }
-  }
-  const initAnswerListeners = () => {
-    const commentElements = document.querySelectorAll(".comment");
-    for (const commentElement of commentElements) {
-      commentElement.addEventListener("click", () => {
-        const index = commentElement.dataset.index;
-        commentTextareaElement.value = `>${comments[index].text}\n${comments[index].userName}`;
-      })
-    }
-  }
-
-  const fetchAndRenderComments = () => {
-    return fetch("https://wedev-api.sky.pro/api/v1/pauline-orda/comments", {
-      method: "GET"
-    })
-      .then((response) => {
-        return response.json();
-      })
-      .then((responseData) => {
-        comments = responseData.comments.map((comment) => {
-          return {
-            userName: comment.author.name,
-            date: new Date(comment.date),
-            text: comment.text,
-            likeCounter: comment.likes,
-            isLiked: false,
-          }
-        })
-        renderComments();
-      })
-      .catch((error) => {
-        alert("Кажется, у вас сломался интернет, попробуйте позже");
-        console.warn(error);
-      });
-  }
-
-  const renderComments = () => {
-    const commentsHtml = comments.map((comment, index) => {
-      return `<li data-index="${index}"class="comment">
-          <div class="comment-header">
-            <div>${comment.userName}</div>
-            <div>${comment.date.toLocaleDateString('ru-RU', options)}</div>
-          </div>
-          <div class="comment-body">
-            <div class="comment-text">
-              ${comment.text}
-            </div>
-          </div>
-          <div class="comment-footer">
-            <div class="likes">
-              <span class="likes-counter">${comment.likeCounter}</span>
-              <button data-index="${index}"class="${comment.isLiked ? "like-button -active-like" : "like-button"}"></button>
-            </div>
-          </div>
-        </li>`;
-    })
-      .join("");
-
-    listElement.innerHTML = commentsHtml;
-    initEventListeners();
-    initAnswerListeners();
-  }
-
-  const renderForm = () => {
-    document.querySelector(".form-loading").style.display = "none";
-    const formHtml = `<input id="name-input" type="text" class="add-form-name" placeholder="Введите ваше имя" />
+      <input id="name-input" type="text" class="add-form-name" placeholder="Введите ваше имя" />
       <textarea id="comment-text" type="textarea" class="add-form-text" placeholder="Введите ваш комментарий"
         rows="4"></textarea>
       <div class="add-form-row">
-        <button id="add-button" class="add-form-button">Написать</button>`;
+        <button id="add-button" class="add-form-button">Написать</button>
+      </div>
+    </div>
+    <div id="loading" class="form-loading">Комментарий добавляется...</div>
+  </div>
+</body>
 
-    formElement.innerHTML = formHtml;
-
-    const buttonElement = document.getElementById("add-button");
-    const nameInputElement = document.getElementById("name-input");
-    const commentTextareaElement = document.getElementById("comment-text");
-
-    nameInputElement.addEventListener("input", () => {
-      if (nameInputElement.value !== "" && commentTextareaElement.value !== "") {
-        buttonElement.removeAttribute("disabled");
-        buttonElement.classList.remove("error");
-      }
-    });
-
-    commentTextareaElement.addEventListener("input", () => {
-      if (nameInputElement.value !== "" && commentTextareaElement.value !== "") {
-        buttonElement.removeAttribute("disabled");
-        buttonElement.classList.remove("error");
-      }
-    });
-
-    buttonElement.addEventListener("click", () => {
-      if (nameInputElement.value === "" || commentTextareaElement.value === "") {
-        buttonElement.setAttribute("disabled", "disabled");
-        buttonElement.classList.add("error");
-        return;
-      }
-
-      // formElement.textContent = "Комментарий добавляется..."
-      document.querySelector(".form-loading").style.display = "block";
-      document.querySelector(".add-form").style.display = "none";
-      fetch("https://wedev-api.sky.pro/api/v1/pauline-orda/comments", {
-        method: "POST",
-        body: JSON.stringify({
-          text: commentTextareaElement.value
-            .replaceAll("&", "&amp;")
-            .replaceAll("<", "&lt;")
-            .replaceAll(">", "&gt;")
-            .replaceAll('"', "&quot;"),
-          name: nameInputElement.value
-            .replaceAll("&", "&amp;")
-            .replaceAll("<", "&lt;")
-            .replaceAll(">", "&gt;")
-            .replaceAll('"', "&quot;"),
-          forceError: true
-        })
-      })
-        .then((response) => {
-          if (response.status === 200) {
-            return response.json();
-          }
-          if (response.status === 400) {
-            throw new Error("Плохой запрос");
-          }
-          if (response.status === 500) {
-            throw new Error("Сервер сломался");
-          }
-        })
-        .then(() => {
-          return fetchAndRenderComments();
-        })
-        .then(() => {
-          // formElement.innerHTML = formHtml;
-          document.querySelector(".form-loading").style.display = "none";
-          document.querySelector(".add-form").style.display = "block";
-          nameInputElement.value = "";
-          commentTextareaElement.value = "";
-        })
-        .catch((error) => {
-          document.querySelector(".form-loading").style.display = "none";
-          document.querySelector(".add-form").style.display = "block";
-          if (error.message === "Плохой запрос") {
-            alert("Имя и комментарий должны быть не короче 3 символов");
-          }
-          if (error.message === "Сервер сломался") {
-            alert("Сервер сломался, попробуй позже");
-          }
-          if (error.message !== "Плохой запрос" && error.message !== "Сервер сломался") {
-            alert("Кажется, у вас сломался интернет, попробуйте позже");
-          }
-          console.warn(error);
-        });
-    });
-  }
-
-  listElement.textContent = "Пожалуйста, подождите, комментарии добавляются...";
-  fetchAndRenderComments();
-  renderForm();
-
-</script>
-
+<script type="module" src="scripts/main.js"></script>
 </html>
