--- a/index.html
+++ b/index.html
@@ -7,24 +7,10 @@
   <link rel="stylesheet" href="styles.css" />
 </head>
 
-<body>
-  <div class="container">
-    <ul id="list" class="comments">
-    </ul>
-    <div id="form">
-      <!-- <div id="comment-add-form" class="add-form">
-        <input id="name-input" type="text" class="add-form-name" placeholder="Введите ваше имя" />
-        <textarea id="comment-text" type="textarea" class="add-form-text" placeholder="Введите ваш комментарий"
-          rows="4"></textarea>
-        <div class="add-form-row">
-          <button id="add-button" class="add-form-button">Написать</button>
-        </div>
-      </div>
-    </div>
-    <div id="loading" class="form-loading">Комментарий добавляется...</div> -->
-  </div>
+<body> 
+</div>` 
+  <div id="app"></div>
 </body>
-
 
 <script type="module" src="scripts/main.js"></script>
 
